# gpt-sheets

./: pyproject.toml  scr.py
